[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets_OLD/fonts/YanoneKaffeesatz-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/ui/verb_display/Verb.gd" type="Script" id=2]


[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.098039, 0.403922, 0.086275, 0.86275 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[node name="Verb" type="CenterContainer"]
margin_right = 500.0
margin_bottom = 56.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
verb_name = "Take"

[node name="TopMargin" type="MarginContainer" parent="."]
margin_right = 500.0
margin_bottom = 56.0
mouse_filter = 2
custom_constants/margin_top = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="TopMargin"]
margin_right = 500.0
margin_bottom = 56.0
rect_min_size = Vector2( 500, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerbMargin" type="MarginContainer" parent="TopMargin"]
margin_right = 500.0
margin_bottom = 56.0
mouse_filter = 2
custom_constants/margin_top = 9
custom_constants/margin_left = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerbName" type="Label" parent="TopMargin/VerbMargin"]
margin_left = 12.0
margin_top = 9.0
margin_right = 500.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Take"
__meta__ = {
"_edit_use_anchors_": false
}
